# Belimo_RoomUnit_ESP32-C3

./: CMakeLists.txt  README.md
.cache/clangd/index/: ascii_lrc.c.ACBF3E25CB3BE750.idx  ascii_slave.c.B274469D54652EB5.idx  esp_modbus_slave_serial.c.2A5BB08F6678C871.idx  esp_modbus_slave_tcp.c.3E2231091E8993A9.idx  mb_frame.h.84D3CA1E67F1CD43.idx  mb_master.c.A5520055B55154F7.idx  mb_slave.h.2F0142AB9858A639.idx  mb_transaction.c.507EB6621FED8C67.idx  mb_types.h.03B1B5C77E09DE37.idx  mbc_master.h.7E3914346B48909C.idx  mbc_serial_slave.h.74894C5AB5AE390E.idx  mbc_slave.h.D2BDB66AE04EBDD8.idx  mbc_tcp_master.c.07FEAD60E7FA40A8.idx  mbc_tcp_master.h.5AD1F1F5599BA694.idx  mbc_tcp_slave.h.CC5A0BC325C32A95.idx  mbcrc.c.47BE44DF2072BF33.idx  mbcrc.h.2F6E61AB0D4A2E1E.idx  mbfunccoils.c.F5BDE9BCFB3976A4.idx  mbfunccoils_master.c.0A4D4A832FF1D819.idx  mbfuncdisc_master.c.8ED271BFA882A1E3.idx  mbfuncholding_master.c.BB9190782A02CA0E.idx  mbfuncinput.c.203927E7AB1E6C65.idx  (+13 more)
3D-Design/: P-22RTM-1900D-11.stp  PCB_MOCKUP_v1.3.step  Part Studio 1 - PCB.step  readme-and-terms-of-use-3d-cad-models.txt
Code/: CMakeLists.txt
Code/main/: idf_component.yml  main.c
PCB/RoomUnit_MQTT_PCB/: #auto_saved_files#  Project_Library.bak  Project_Library.kicad_sym  RoomUnit_MQTT_PCB.kicad_pcb  RoomUnit_MQTT_PCB.kicad_prl  RoomUnit_MQTT_PCB.kicad_pro  RoomUnit_MQTT_PCB.kicad_sch  RoomUnit_MQTT_PCB.step  _autosave-RoomUnit_MQTT_PCB.kicad_pcb  fp-info-cache  sym-lib-table  ~RoomUnit_MQTT_PCB.kicad_sch.lck  ~_autosave-RoomUnit_MQTT_PCB.kicad_pcb.lck
main/: CMakeLists.txt  main.c
(+55 files in other folders)
